--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "goit-js-hw-08",
   "version": "1.0.0",
-  "description": "goit-js-hw-08 goit-js-hw-08",
+  "description": "hw-08",
   "main": "index.js",
+  "homepage": "https://github.com/Finkons/goit-js-hw-08/",
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html --public-url /goit-js-hw-08/",
@@ -18,13 +19,16 @@
   "bugs": {
     "url": "https://github.com/Finkons/goit-js-hw-08/issues"
   },
-  "homepage": "https://github.com/Finkons/goit-js-hw-08/",
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-react": "^7.16.7",
     "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
     "@vimeo/player": "^2.16.4",
+    "browserslist": "^4.20.3",
     "lodash.throttle": "^4.1.1",
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
     "simplelightbox": "^2.10.3"
   }
 }
