--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
+    "gh-pages": "^3.2.3",
     "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
