--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "@babel/core": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "gh-pages": "^3.2.3",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "parcel-plugin-nuke-dist": "^1.0.1"
   },
   "dependencies": {
     "@vimeo/player": "^2.16.4",
     "browserslist": "^4.20.3",
     "lodash.throttle": "^4.1.1",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
+    "posthtml-include": "^1.7.3",
     "simplelightbox": "^2.10.3"
   }
 }
