--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-js-hw-08",
   "version": "1.0.0",
   "description": "hw-08",
-  "main": "index.js",
+  "main": "src/index.js",
   "homepage": "https://github.com/Finkons/goit-js-hw-08/",
   "scripts": {
     "dev": "parcel src/index.html",
