--- a/package.json
+++ b/package.json
@@ -1,38 +1,32 @@
 {
-  "name": "goit-js-hw-08",
-  "version": "1.0.0",
-  "description": "hw-08",
-  "main": "src/index.js",
-  "homepage": "https://github.com/Finkons/goit-js-hw-08/",
+  "name": "parcel-project-template",
+  "version": "1.1.0",
+  "description": "",
+  "main": "index.js",
+  "homepage": "https://Finkons.github.io/goit-js-hw-08",
   "scripts": {
-    "deploy": "gh-pages -d dist",
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url /goit-js-hw-08/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel src/*.html",
+    "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Finkons/goit-js-hw-08.git"
+    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Finkons/goit-js-hw-08/issues"
+    "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-react": "^7.16.7",
-    "gh-pages": "^3.2.3",
     "parcel-bundler": "^1.12.5",
-    "parcel-plugin-nuke-dist": "^1.0.1"
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
+    "parcel-plugin-nuke-dist": "^1.0.1",
+    "posthtml-include": "^1.6.2",
+    "sass": "^1.32.8"
   },
   "dependencies": {
-    "@vimeo/player": "^2.16.4",
-    "browserslist": "^4.20.3",
     "lodash.throttle": "^4.1.1",
-    "parcel-plugin-handlebars-precompile": "^1.0.2",
-    "posthtml-include": "^1.7.3",
     "simplelightbox": "^2.10.3"
   }
 }
